[package]
name = "x"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.37.0"
tracing-subscriber = "0.3.18"
subxt-signer = { version = "0.35.0", default-features = false }
subxt = { version = "0.35.3", features = ["substrate-compat"] }
zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk.git", rev = "384bf252e5e31eeaa91f7c2ddcafb8173c6aaf78" }